// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snaphot Testing for Calendar Title 1`] = `
<div
  className="calendar-title"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-zow5z4-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-9 css-d75gfe-MuiGrid-root"
    >
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
      >
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 calendar-month css-j23p4t-MuiGrid-root"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ArrowLeftIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m14 7-5 5 5 5V7z"
            />
          </svg>
        </div>
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 css-ayy8wd-MuiGrid-root"
        >
          <span
            className="calendar-month"
            title="calendar-title"
          >
            September
             
            2021
          </span>
        </div>
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 calendar-month css-j23p4t-MuiGrid-root"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="ArrowRightIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m10 17 5-5-5-5v10z"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-3 css-10wfvsf-MuiGrid-root"
    >
      <button
        className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root css-sghohy-MuiButtonBase-root-MuiButton-root"
        disabled={false}
        id="add-event-button"
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="AddBoxIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-2 10h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
            />
          </svg>
        </span>
        New Event
      </button>
    </div>
  </div>
</div>
`;

exports[`Snaphot Testing for Event Details 1`] = `
<div
  className="MuiBox-root css-0"
>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 css-1402ce4-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-9 css-l4g9cp-MuiGrid-root"
      data-testid="event-day-component"
    >
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-bhp9pd-MuiPaper-root-MuiCard-root"
        style={
          Object {
            "backgroundColor": "#EAEEF3",
          }
        }
      >
        <div
          className="MuiCardContent-root css-46bh2p-MuiCardContent-root"
        >
          <div
            className="MuiTypography-root MuiTypography-h5 css-1asgzld-MuiTypography-root"
          >
            11:00 PM
             
            Test 30
          </div>
          <p
            className="MuiTypography-root MuiTypography-body1 css-pqpbz4-MuiTypography-root"
          />
          <p
            className="MuiTypography-root MuiTypography-body1 css-xor7ac-MuiTypography-root"
          />
          <h6
            className="MuiTypography-root MuiTypography-subtitle1 css-tdqki2-MuiTypography-root"
          >
            Online
             via 
            Zoom
          </h6>
          <div
            className="MuiCardActions-root css-1rwjz6-MuiCardActions-root"
          >
            <button
              className="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButtonBase-root css-1k23hlb-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              id="space-btw-event-button"
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              Open Event
            </button>
            <button
              className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeSmall MuiButton-containedSizeSmall MuiButtonBase-root css-11qr2p8-MuiButtonBase-root-MuiButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-startIcon MuiButton-iconSizeSmall css-y6rp3m-MuiButton-startIcon"
              >
                <svg
                  aria-hidden={true}
                  className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                  data-testid="EditIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 0 0-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                  />
                </svg>
              </span>
              Edit Event
            </button>
            <button
              className="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-3ogxn6-MuiButtonBase-root-MuiIconButton-root"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onContextMenu={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <svg
                aria-hidden={true}
                className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                data-testid="ExpandMoreIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Snapshot Testing for Calendar Days 1`] = `
<div
  className="calendar-container"
>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      1
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      2
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      3
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      4
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      5
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      6
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      7
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      8
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      9
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      10
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      11
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      12
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      13
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      14
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      15
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      16
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      17
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      18
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      19
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      20
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      21
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      22
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      23
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      24
    </p>
    <div>
      <p
        className="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-ejgmvm-MuiTypography-root"
      >
        Test 24
      </p>
    </div>
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      25
    </p>
    <div>
      <p
        className="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-ejgmvm-MuiTypography-root"
      >
        Test 25
      </p>
    </div>
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      26
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      27
    </p>
    <div>
      <p
        className="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-ejgmvm-MuiTypography-root"
      >
        Test 27
      </p>
    </div>
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      28
    </p>
    <div>
      <p
        className="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-ejgmvm-MuiTypography-root"
      >
        Test 28
      </p>
    </div>
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      29
    </p>
    <div />
  </div>
  <div
    className="calendar-day"
    data-testid="calendar-a-day"
    onClick={[Function]}
  >
    <p>
      30
    </p>
    <div>
      <p
        className="MuiTypography-root MuiTypography-body2 MuiTypography-gutterBottom css-ejgmvm-MuiTypography-root"
      >
        Test 30
      </p>
    </div>
  </div>
</div>
`;

exports[`Snapshot Testing for Calendar Header 1`] = `
<div
  className="calendar-header"
  data-testid="mytestid"
>
  <div>
    Sun
  </div>
  <div>
    Mon
  </div>
  <div>
    Tue
  </div>
  <div>
    Wed
  </div>
  <div>
    Thu
  </div>
  <div>
    Fri
  </div>
  <div>
    Sat
  </div>
</div>
`;
